Bring in external files into repo.

--- a/docs/readme.org
+++ b/docs/readme.org
@@ -1,14 +1,17 @@
-* settings :ignore:noexport:
+* settings                                                  :ignore:noexport:
   #+STARTUP: hidestars logdone content
   #+TODO: NEXT(n!) INCOMPLETE(i!) TODO(t!) CANCEL(c@!) DONE(d!)
   #+EXCLUDE_TAGS: noexport
   #+OPTIONS: timestamp:nil
   #+OPTIONS: toc:nil
-  #+OPTIONS: ^init tex:t' num:nil
+  #+OPTIONS: ^init tex:t' num:nil ^:nil
   #+EXPORT_FILE_NAME: ../README.md
 
 * cnc warmup
   This warmup scrip generates a warmup file for Heidenhain controller
 
 * how to use
-  todo - writeup a how to here.
+  Example:
+  #+begin_src bash
+    cnc_warmup small 1 -o output/small_warmup.h
+  #+end_src
