--- a/docs/notes.org
+++ b/docs/notes.org
@@ -57,8 +57,8 @@
           - [X] small.py
           - [X] medium.py
           - [X] large.py
-    - [ ] tests/ [0/4]
-      - [ ] __init__.py
+    - [-] tests/ [1/4]
+      - [X] __init__.py
       - [ ] test_cli.py
       - [ ] test_generator.py
       - [ ] test_machines/ [0/3]
